deploy: 37438fb0b50f518972d3b6476d807823a2df1805

--- a/logo-computing-argocd.html
+++ b/logo-computing-argocd.html
@@ -1,4 +1,4 @@
-<h1>Logotipo do Produto A</h1>
+<h1>Logotipo do Produto ARGOCD</h1>
 
 <p><img src="url-para-o-logotipo-aqui.png" alt="Logotipo do Produto A" />
 Descrição breve do logotipo, se necessário.</p>
