deploy: 693c68acfda7b7d4108d8c01dff5321171b9d7e0

--- a/index-computing-argocd.html
+++ b/index-computing-argocd.html
@@ -1,6 +1,10 @@
-<p><style>
-@import url(&lsquo;../../../css/style.css&rsquo;);
-</style></p>
+<p>&lt;!DOCTYPE html&gt;
+<html>
+<head>
+    <title>Markdown with CSS</title>
+    <link rel="stylesheet" type="text/css" href="../../../css/style.css">
+</head>
+<body></p>
 
 <h1>Produto ARGOCD</h1>
 
