deploy: f3b2b77d3319f85cdceaaaf42ace582104cacc11

--- a/index-computing-argocd.html
+++ b/index-computing-argocd.html
@@ -1,8 +1,8 @@
-<p>&lt;!DOCTYPE html&gt;
+<p>`markdown
 <html>
 <head>
     <title>Markdown with CSS</title>
-    <link rel="stylesheet" type="text/css" href="../../../css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body></p>
 
@@ -34,3 +34,31 @@ Para mais detalhes sobre cada funcionalidade, veja <a href="guias.md">Guias</a>.
 
 <p>Como contribuir para o desenvolvimento e melhorias do produto. Link para <code>CONTRIBUTING.md</code> se aplicável.</p></li>
 </ul>
+
+<p></body>
+</html>
+<code>
+</code>css
+body {
+font-family: &lsquo;Segoe UI&rsquo;, Tahoma, Geneva, Verdana, sans-serif;
+color: #fff; /* White text color <em>/
+background-color: #243f2b; /</em> Dark green background color <em>/
+}
+h1 {
+color: #fff; /</em> White color for h1 <em>/
+}
+h2 {
+color: #cfd8dc; /</em> Light grey color for h2 <em>/
+}
+ul {
+list-style-type: disc; /</em> Use bullet points for lists <em>/
+}
+a {
+color: #4caf50; /</em> Green color for links <em>/
+text-decoration: none; /</em> Remove underline from links */
+}
+@import url(&rsquo;<a href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap'">https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap&rsquo;</a>);
+body {
+font-family: &lsquo;Roboto&rsquo;, sans-serif;
+}
+`</p>
