--- a/index-computing-argocd.html
+++ b/index-computing-argocd.html
@@ -1,8 +1,7 @@
-<p>`markdown
-<html>
+<p><html>
 <head>
     <title>Markdown with CSS</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../../../css/style.css">
 </head>
 <body></p>
 
@@ -36,29 +35,4 @@ Para mais detalhes sobre cada funcionalidade, veja <a href="guias.md">Guias</a>.
 </ul>
 
 <p></body>
-</html>
-<code>
-</code>css
-body {
-font-family: &lsquo;Segoe UI&rsquo;, Tahoma, Geneva, Verdana, sans-serif;
-color: #fff; /* White text color <em>/
-background-color: #243f2b; /</em> Dark green background color <em>/
-}
-h1 {
-color: #fff; /</em> White color for h1 <em>/
-}
-h2 {
-color: #cfd8dc; /</em> Light grey color for h2 <em>/
-}
-ul {
-list-style-type: disc; /</em> Use bullet points for lists <em>/
-}
-a {
-color: #4caf50; /</em> Green color for links <em>/
-text-decoration: none; /</em> Remove underline from links */
-}
-@import url(&rsquo;<a href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap'">https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap&rsquo;</a>);
-body {
-font-family: &lsquo;Roboto&rsquo;, sans-serif;
-}
-`</p>
+</html></p>
