--- a/logo-computing-argocd.html
+++ b/logo-computing-argocd.html
@@ -1,4 +1,9 @@
-<h1>Logotipo do Produto ARGOCD</h1>
+<html>
+<head>
+    <title>Markdown with CSS</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body><h1>Logotipo do Produto ARGOCD</h1>
 
 <p><img src="url-para-o-logotipo-aqui.png" alt="Logotipo do Produto A" />
 Descrição breve do logotipo, se necessário.</p>
